Fixed date conditions in subs-sum endpoint
